extras/fathom/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fathom
  labels:
    app: fathom
spec:
  selector:
    app: fathom
  ports:
    - name: http
      port: 80
      targetPort: 8080
