extras/fathom/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fathom
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - fathom.example.com
    secretName: fathom-tls
  rules:
  - host: fathom.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fathom
          servicePort: http
